<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MovieDetailsActivity" >

        <ImageView
            android:id="@+id/background_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/orig"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mask_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_path" />

        <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back_text"
            android:textColor="@color/white_50opacity"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/back_img"
            app:layout_constraintStart_toEndOf="@+id/back_img"
            app:layout_constraintTop_toTopOf="@+id/back_img" />

        <ImageView
            android:id="@+id/pg_bkg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="222dp"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_rectangle" />

        <TextView
            android:id="@+id/pg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pg"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/pg_bkg"
            app:layout_constraintEnd_toEndOf="@+id/pg_bkg"
            app:layout_constraintStart_toStartOf="@+id/pg_bkg"
            app:layout_constraintTop_toTopOf="@+id/pg_bkg" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textColor="@color/name"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/pg" />

        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tag"
            android:textColor="@color/tag"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <ImageView
            android:id="@+id/star1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/reviews"
            app:layout_constraintBottom_toBottomOf="@+id/reviews"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/star_pink" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/star1"
            app:layout_constraintTop_toTopOf="@+id/star1"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/star_pink" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/star1"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/star_pink" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/star1"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/star_pink" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3.25dp"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/star1"
            app:layout_constraintBottom_toBottomOf="@+id/star1"
            app:srcCompat="@drawable/ic_star_icon"
            app:tint="@color/star_gray" />

        <TextView
            android:id="@+id/reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews"
            android:textColor="@color/reviews"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/tag" />

        <TextView
            android:id="@+id/storyline_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/storyline_head"
            android:textColor="@color/storyline_head"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/star1" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/storyline"
            android:textColor="@color/storyline"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline_head" />

        <TextView
            android:id="@+id/cast_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/storyline_head"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <ImageView
            android:id="@+id/cast_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/rd"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/cast_2"
            app:layout_constraintStart_toEndOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/cast_head" />

        <ImageView
            android:id="@+id/cast_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ce"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/cast_3"
            app:layout_constraintStart_toEndOf="@+id/cast_1"
            app:layout_constraintTop_toTopOf="@+id/cast_1"
            app:layout_constraintBottom_toBottomOf="@+id/cast_1" />

        <ImageView
            android:id="@+id/cast_3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/mr"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/cast_4"
            app:layout_constraintStart_toEndOf="@+id/cast_2"
            app:layout_constraintTop_toTopOf="@+id/cast_1"
            app:layout_constraintBottom_toBottomOf="@+id/cast_1" />

        <ImageView
            android:id="@+id/cast_4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ch"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toEndOf="@+id/cast_3"
            app:layout_constraintTop_toTopOf="@+id/cast_1"
            app:layout_constraintBottom_toBottomOf="@+id/cast_1" />

        <TextView
            android:id="@+id/cast_1_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast_1_text"
            android:textColor="@color/cast_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast_1"
            app:layout_constraintStart_toStartOf="@+id/cast_1"
            app:layout_constraintTop_toBottomOf="@+id/cast_1" />

        <TextView
            android:id="@+id/cast_2_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast_2_text"
            android:textColor="@color/cast_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast_2"
            app:layout_constraintStart_toStartOf="@+id/cast_2"
            app:layout_constraintTop_toBottomOf="@+id/cast_2" />

        <TextView
            android:id="@+id/cast_3_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast_3_text"
            android:textColor="@color/cast_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast_3"
            app:layout_constraintStart_toStartOf="@+id/cast_3"
            app:layout_constraintTop_toBottomOf="@+id/cast_3" />

        <TextView
            android:id="@+id/cast_4_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cast_4_text"
            android:textColor="@color/cast_text"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cast_4"
            app:layout_constraintStart_toStartOf="@+id/cast_4"
            app:layout_constraintTop_toBottomOf="@+id/cast_4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
